POWR-1157 Fix misspelling in city section field

--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - entity_browser.browser.park_locations_browser
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
-    - field.field.node.park_facility.field_city_secsion
+    - field.field.node.park_facility.field_city_section
     - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
@@ -79,11 +79,14 @@ content:
         maxlength_js_truncate_html: false
     type: text_textarea
     region: content
-  field_city_secsion:
+  field_city_section:
     weight: 4
-    settings: {  }
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_autocomplete
     region: content
   field_facebook:
     weight: 26
