--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
-    - field.field.node.park_facility.field_city_secsion
+    - field.field.node.park_facility.field_city_section
     - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
@@ -55,9 +55,9 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_city_secsion:
+  field_city_section:
     weight: 3
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -127,7 +127,7 @@ content:
     region: content
   field_neighborhood:
     weight: 4
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
