--- a/web/sites/default/config/field.field.node.park_facility.field_city_section.yml
+++ b/web/sites/default/config/field.field.node.park_facility.field_city_section.yml
@@ -1,9 +1,9 @@
-uuid: 52cdcc31-5472-4d4b-8e9b-0ef28bf81373
+uuid: c7e57671-1215-4108-9bc2-d8f6b0d8da55
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_city_secsion
+    - field.storage.node.field_city_section
     - node.type.park_facility
     - taxonomy.vocabulary.city_section
   module:
@@ -12,11 +12,11 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.park_facility.field_city_secsion
-field_name: field_city_secsion
+id: node.park_facility.field_city_section
+field_name: field_city_section
 entity_type: node
 bundle: park_facility
-label: 'City secsion'
+label: 'City section'
 description: ''
 required: false
 translatable: false
