--- a/web/sites/default/config/field.storage.node.field_city_section.yml
+++ b/web/sites/default/config/field.storage.node.field_city_section.yml
@@ -1,4 +1,4 @@
-uuid: e18c9336-104b-497e-9647-e379d709ba5d
+uuid: d4cdcd6a-3f16-46c2-a5c9-071a38d1267b
 langcode: en
 status: true
 dependencies:
@@ -9,8 +9,8 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_city_secsion
-field_name: field_city_secsion
+id: node.field_city_section
+field_name: field_city_section
 entity_type: node
 type: entity_reference
 settings:
