POWR-1060 Add field group with document link

--- a/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
@@ -15,8 +15,31 @@ dependencies:
     - media.type.document
   module:
     - ds
+    - field_group
     - file
     - link
+third_party_settings:
+  field_group:
+    group_document_link:
+      children:
+        - field_mime_type
+        - field_document
+        - field_file_size
+      parent_name: ''
+      weight: 0
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: 'flex items-center'
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Document link'
+      region: content
 _core:
   default_config_hash: qwXr3yVUHU3LwMQ1n9mTyDj2s7sUqpNtasS-nSu86rE
 id: media.document.embedded
@@ -26,7 +49,7 @@ mode: embedded
 content:
   field_document:
     type: file_default
-    weight: 1
+    weight: 2
     region: content
     label: visually_hidden
     settings:
@@ -41,7 +64,7 @@ content:
             classes: {  }
   field_efiles_link:
     type: link
-    weight: 2
+    weight: 3
     region: content
     label: visually_hidden
     settings:
@@ -62,7 +85,7 @@ content:
     third_party_settings: {  }
   field_mime_type:
     type: string
-    weight: 0
+    weight: 1
     region: content
     label: visually_hidden
     settings:
