POWR-1060 Remove field group in favor of file link Template handles icon and file size

--- a/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
@@ -15,31 +15,8 @@ dependencies:
     - media.type.document
   module:
     - ds
-    - field_group
     - file
     - link
-third_party_settings:
-  field_group:
-    group_document_link:
-      children:
-        - field_mime_type
-        - field_document
-        - field_file_size
-      parent_name: ''
-      weight: 0
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: 'flex items-center'
-        element: div
-        show_label: false
-        label_element: h3
-        label_element_classes: ''
-        attributes: ''
-        effect: none
-        speed: fast
-      label: 'Document link'
-      region: content
 _core:
   default_config_hash: qwXr3yVUHU3LwMQ1n9mTyDj2s7sUqpNtasS-nSu86rE
 id: media.document.embedded
@@ -74,29 +51,14 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-  field_file_size:
-    type: number_integer
-    weight: 3
-    region: content
-    label: visually_hidden
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
-    third_party_settings: {  }
-  field_mime_type:
-    type: string
-    weight: 1
-    region: content
-    label: visually_hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
   field_document_type: true
+  field_file_size: true
   field_group: true
   field_media_in_library: true
+  field_mime_type: true
   field_summary: true
   group_content: true
   name: true
