--- a/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.teaser.yml
@@ -15,7 +15,6 @@ dependencies:
     - media.type.document
   module:
     - ds
-    - field_group
     - file
     - link
 third_party_settings:
@@ -30,33 +29,9 @@ third_party_settings:
       content:
         - name
         - field_document_type
+        - field_document
         - field_efiles_link
-        - group_document_link
         - field_summary
-        - field_mime_type
-        - field_document
-        - field_file_size
-  field_group:
-    group_document_link:
-      children:
-        - field_mime_type
-        - field_document
-        - field_file_size
-      parent_name: ''
-      weight: 3
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: 'flex items-center'
-        element: div
-        show_label: false
-        label_element: h3
-        label_element_classes: ''
-        attributes: ''
-        effect: none
-        speed: fast
-      label: 'Document link'
-      region: content
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.teaser
@@ -66,7 +41,7 @@ mode: teaser
 content:
   field_document:
     type: file_default
-    weight: 14
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -110,7 +85,7 @@ content:
             fi-def-at: false
   field_efiles_link:
     type: link
-    weight: 2
+    weight: 3
     region: content
     label: visually_hidden
     settings:
@@ -119,21 +94,6 @@ content:
       url_plain: false
       rel: ''
       target: ''
-    third_party_settings: {  }
-  field_file_size:
-    type: number_unformatted
-    weight: 15
-    region: content
-    label: visually_hidden
-    settings: {  }
-    third_party_settings: {  }
-  field_mime_type:
-    type: string
-    weight: 13
-    region: content
-    label: visually_hidden
-    settings:
-      link_to_entity: false
     third_party_settings: {  }
   field_summary:
     type: string
@@ -182,8 +142,10 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_file_size: true
   field_group: true
   field_media_in_library: true
+  field_mime_type: true
   group_content: true
   thumbnail: true
   uid: true
