--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -14,31 +14,8 @@ dependencies:
     - media.type.document
   module:
     - ds
-    - field_group
     - file
     - link
-third_party_settings:
-  field_group:
-    group_document_link:
-      children:
-        - field_mime_type
-        - field_document
-        - field_file_size
-      parent_name: ''
-      weight: 4
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: 'flex items-center'
-        element: div
-        show_label: false
-        label_element: h3
-        label_element_classes: ''
-        attributes: ''
-        effect: none
-        speed: fast
-      label: 'Document link'
-      region: content
 _core:
   default_config_hash: 4tgcXj_iKv9Fw3xmONUfCHKqO7OeOa11qVesruN4k4k
 id: media.document.default
@@ -49,7 +26,7 @@ content:
   created:
     label: inline
     type: timestamp
-    weight: 6
+    weight: 5
     settings:
       date_format: long
       custom_date_format: ''
@@ -64,7 +41,7 @@ content:
             classes: {  }
     region: content
   field_document:
-    weight: 14
+    weight: 3
     label: visually_hidden
     settings:
       use_description_as_link_text: true
@@ -94,7 +71,7 @@ content:
     type: entity_reference_label
     region: content
   field_efiles_link:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       trim_length: null
@@ -112,31 +89,14 @@ content:
             classes: {  }
     type: link
     region: content
-  field_file_size:
-    type: number_integer
-    weight: 15
-    region: content
-    label: visually_hidden
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
-    third_party_settings: {  }
   field_group:
-    weight: 7
+    weight: 6
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_mime_type:
-    type: string
-    weight: 13
-    region: content
-    label: visually_hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_summary:
     weight: 2
     label: hidden
@@ -155,7 +115,9 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_file_size: true
   field_media_in_library: true
+  field_mime_type: true
   group_content: true
   thumbnail: true
   uid: true
