POWR-1371 added Calendar item content type and installed it on Elected Official and Bureau/Office group types

--- a/web/sites/default/config/field.storage.node.field_calendar_item_location.yml
+++ b/web/sites/default/config/field.storage.node.field_calendar_item_location.yml
@@ -1,4 +1,4 @@
-uuid: b72866a3-e214-4007-8022-ef75297c835b
+uuid: 5843cf11-98df-4260-a5f9-ea72b563ae8a
 langcode: en
 status: true
 dependencies:
@@ -8,11 +8,14 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_all_day
-field_name: field_all_day
+id: node.field_calendar_item_location
+field_name: field_calendar_item_location
 entity_type: node
-type: boolean
-settings: {  }
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
