--- a/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
@@ -4,85 +4,105 @@ status: true
 dependencies:
   config:
     - field.field.node.calendar_item.body
+    - field.field.node.calendar_item.field_all_day
+    - field.field.node.calendar_item.field_calendar_item_location
+    - field.field.node.calendar_item.field_calendar_item_type
+    - field.field.node.calendar_item.field_end_date
+    - field.field.node.calendar_item.field_end_time
+    - field.field.node.calendar_item.field_participants
+    - field.field.node.calendar_item.field_start_date
+    - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
   module:
-    - content_moderation
-    - path
-    - text
+    - datetime
+    - time_field
 id: node.calendar_item.default
 targetEntityType: node
 bundle: calendar_item
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 121
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
-    third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
+  field_all_day:
+    weight: 4
     settings:
       display_label: true
-    weight: 15
-    region: content
     third_party_settings: {  }
-  status:
     type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 120
     region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
-    region: content
-    third_party_settings: {  }
-  title:
-    type: string_textfield
-    weight: -5
-    region: content
+  field_calendar_item_location:
+    weight: 7
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 5
+    type: string_textfield
+    region: content
+  field_calendar_item_type:
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    region: content
     third_party_settings: {  }
-  url_redirects:
-    weight: 50
+    type: entity_reference_autocomplete
+    region: content
+  field_end_date:
+    weight: 5
     settings: {  }
     third_party_settings: {  }
+    type: datetime_default
     region: content
+  field_end_time:
+    weight: 6
+    settings:
+      enabled: false
+      step: 5
+    third_party_settings: {  }
+    type: time_widget
+    region: content
+  field_participants:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_start_date:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_start_time:
+    weight: 3
+    settings:
+      enabled: false
+      step: 5
+    third_party_settings: {  }
+    type: time_widget
+    region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 9
+    region: content
+    third_party_settings: {  }
+  title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
+  body: true
+  created: true
   group_content: true
+  moderation_state: true
+  path: true
+  promote: true
+  sticky: true
+  uid: true
+  url_redirects: true
