--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
@@ -5,27 +5,52 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.calendar_item.body
+    - field.field.node.calendar_item.field_all_day
+    - field.field.node.calendar_item.field_calendar_item_location
+    - field.field.node.calendar_item.field_calendar_item_type
+    - field.field.node.calendar_item.field_end_date
+    - field.field.node.calendar_item.field_end_time
+    - field.field.node.calendar_item.field_participants
+    - field.field.node.calendar_item.field_start_date
+    - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
   module:
-    - text
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.calendar_item.teaser
 targetEntityType: node
 bundle: calendar_item
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
+  field_calendar_item_location:
+    type: string
+    weight: 1
+    region: content
+    label: above
     settings:
-      trim_length: 600
+      link_to_entity: false
     third_party_settings: {  }
+  field_calendar_item_type:
+    type: entity_reference_label
+    weight: 0
     region: content
-  links:
-    weight: 100
-    settings: {  }
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    region: content
 hidden:
+  body: true
+  field_all_day: true
+  field_end_date: true
+  field_end_time: true
+  field_participants: true
+  field_start_date: true
+  field_start_time: true
   group_content: true
+  links: true
