--- a/web/sites/default/config/field.storage.node.field_participants.yml
+++ b/web/sites/default/config/field.storage.node.field_participants.yml
@@ -1,4 +1,4 @@
-uuid: b72866a3-e214-4007-8022-ef75297c835b
+uuid: 2175f5fc-ecbc-4a23-b31e-1d3fd156fe1f
 langcode: en
 status: true
 dependencies:
@@ -8,11 +8,14 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_all_day
-field_name: field_all_day
+id: node.field_participants
+field_name: field_participants
 entity_type: node
-type: boolean
-settings: {  }
+type: string
+settings:
+  max_length: 512
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
