POWR-1361 my groups fields changes

--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -126,6 +126,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  group_content: true
   promote: true
   status: true
   sticky: true
