--- a/web/sites/default/config/views.view.my_groups.yml
+++ b/web/sites/default/config/views.view.my_groups.yml
@@ -368,7 +368,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/group/{{ id }}/node/create">Add content</a> | <a href="/group/{{ id }}/media/create">Add media</a>'
+            text: "{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/node/create\">Add content | </a>{% endif %}\r\n\r\n{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/media/create\">Add media</a>{% endif %}"
             make_link: false
             path: ''
             absolute: false
@@ -421,7 +421,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/group/{{ id }}/members">Manage Members</a>'
+            text: "{% if group_roles == 'Admin' %} <a href=\"/group/{{ id }}/members\">Manage Members</a> {% endif %}\r\n\r\n"
             make_link: false
             path: ''
             absolute: false
@@ -563,6 +563,7 @@ display:
       defaults:
         title: false
         arguments: false
+        fields: true
       arguments:
         uid:
           id: uid
@@ -630,6 +631,8 @@ display:
         weight: -48
         context: '0'
         menu_name: editor-toolbar
+      defaults:
+        fields: true
     cache_metadata:
       max-age: -1
       contexts:
