POWR-1371 updates to custom module; uninstalled so I can rename it;

--- a/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
@@ -15,21 +15,65 @@ dependencies:
     - node.type.calendar_item
   module:
     - datetime
+    - field_group
     - time_field
+third_party_settings:
+  field_group:
+    group_starts:
+      children:
+        - field_start_date
+        - field_start_time
+        - field_all_day
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: compact
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        required_fields: false
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Starts
+      region: content
+    group_ends:
+      children:
+        - field_end_date
+        - field_end_time
+      parent_name: ''
+      weight: 6
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: compact
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        required_fields: false
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Ends
+      region: content
 id: node.calendar_item.default
 targetEntityType: node
 bundle: calendar_item
 mode: default
 content:
   field_all_day:
-    weight: 4
+    weight: 5
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_calendar_item_location:
-    weight: 7
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -46,13 +90,13 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_end_date:
-    weight: 5
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_end_time:
-    weight: 6
+    weight: 5
     settings:
       enabled: false
       step: 5
@@ -60,7 +104,7 @@ content:
     type: time_widget
     region: content
   field_participants:
-    weight: 8
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -68,13 +112,13 @@ content:
     type: string_textfield
     region: content
   field_start_date:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_start_time:
-    weight: 3
+    weight: 4
     settings:
       enabled: false
       step: 5
@@ -85,7 +129,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 11
     region: content
     third_party_settings: {  }
   title:
