--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -144,6 +144,7 @@ module:
   portland_media_embed_helper: 0
   portland_migrations: 0
   portland_moderation_helper: 0
+  portland_quick_entry: 0
   portland_revision_helper: 0
   portland_views_helper: 0
   quickedit: 0
