--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -157,6 +157,7 @@ portland_legacy_redirects: 0.1.0
 portland_media_embed_helper: 0.1.0
 portland_migrations: 0.0.0
 portland_moderation_helper: 0.1.0
+portland_quick_entry: 0.1.0
 portland_revision_helper: 0.1.0
 portland_save_and_add: 0.1.0
 portland_taxonomy_create: 0.1.0
