POWR-1263-2 revised PR

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser_embed
+    - field.field.group.project.field_address
     - field.field.group.project.field_audience
+    - field.field.group.project.field_email
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -16,6 +18,7 @@ dependencies:
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_phone
     - field.field.group.project.field_project_status
     - field.field.group.project.field_project_type
     - field.field.group.project.field_search_keywords
@@ -25,11 +28,13 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - address
     - bootstrap_datepicker
     - chosen_field
     - entity_browser
     - field_group
     - maxlength
+    - telephone
 third_party_settings:
   field_group:
     group_site_menu:
@@ -40,7 +45,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 11
+      weight: 14
       format_type: fieldset
       format_settings:
         id: ''
@@ -54,11 +59,25 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_address:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: address_default
+    region: content
   field_audience:
     weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_email:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: email_default
     region: content
   field_enable_documents_menu_item:
     weight: 14
@@ -96,7 +115,7 @@ content:
     type: boolean_checkbox
     region: content
   field_end_date:
-    weight: 10
+    weight: 13
     settings:
       title: ''
       format: mm/dd/yyyy
@@ -154,7 +173,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_featured_content:
-    weight: 12
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -163,7 +182,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 13
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -187,7 +206,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 14
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -199,6 +218,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_phone:
+    weight: 10
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: telephone_default
     region: content
   field_project_status:
     weight: 8
@@ -213,7 +239,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 15
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -229,7 +255,7 @@ content:
     type: string_textfield
     region: content
   field_start_date:
-    weight: 9
+    weight: 12
     settings:
       title: ''
       format: mm/dd/yyyy
