POWR-1316 Change entityr reference view Limit groups by type appropriate for field_parent_group

--- a/web/sites/default/config/views.view.entity_reference_parent_group.yml
+++ b/web/sites/default/config/views.view.entity_reference_parent_group.yml
@@ -2,6 +2,9 @@ uuid: 6076209e-104d-4896-af3f-71bf6edd3555
 langcode: en
 status: true
 dependencies:
+  config:
+    - group.type.bureau_office
+    - group.type.program
   module:
     - group
     - user
@@ -141,7 +144,49 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: field
-      filters: {  }
+      filters:
+        type:
+          id: type
+          table: groups_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            bureau_office: bureau_office
+            program: program
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: type
+          plugin_id: bundle
       sorts: {  }
       header: {  }
       footer: {  }
@@ -256,6 +301,10 @@ display:
         options:
           search_fields:
             label: label
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
