POWR-1348 Update project form and display
• Add display date field
• Set up fields to use templates

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - entity_browser.browser.image_browser_embed
     - field.field.group.project.field_audience
+    - field.field.group.project.field_display_date
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -40,7 +41,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -59,6 +60,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_display_date:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_enable_documents_menu_item:
     weight: 14
@@ -154,7 +163,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_featured_content:
-    weight: 12
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -163,7 +172,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 13
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -187,7 +196,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 14
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -213,7 +222,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 15
+    weight: 16
     settings:
       size: 60
       placeholder: ''
