--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.group.project.field_audience
+    - field.field.group.project.field_display_date
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -38,40 +39,50 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
-        - group_start_to_end_date
+        - group_date
         - field_summary
         - group_site_menu_entity_view_1
         - field_featured_content
-        - field_featured_groups
+        - field_display_date
         - field_start_date
         - field_end_date
   field_group:
-    group_start_to_end_date:
+    group_date:
       children:
+        - field_display_date
         - field_start_date
         - field_end_date
       parent_name: ''
       weight: 1
       format_type: html_element
       format_settings:
+        id: ''
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
-        id: ''
-        classes: 'event--date pb-2'
-      label: Date
+      label: 'Project date'
       region: content
 id: group.project.default
 targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_display_date:
+    weight: 5
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_end_date:
     type: datetime_default
-    weight: 20
+    weight: 7
     region: content
     label: hidden
     settings:
@@ -80,32 +91,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: End
-            prefix: through
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_featured_content:
     weight: 4
     label: above
@@ -119,23 +109,6 @@ content:
           id: default
           settings:
             lb: Featured
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_groups:
-    weight: 6
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: 'Programs and projects'
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
@@ -178,7 +151,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_start_date:
-    weight: 19
+    weight: 6
     label: hidden
     settings:
       timezone_override: ''
@@ -186,32 +159,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: Start
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: datetime_default
     region: content
   field_summary:
@@ -264,6 +216,7 @@ hidden:
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
   field_enable_projects_menu_item: true
+  field_featured_groups: true
   field_legacy_path: true
   field_parent_group: true
   field_project_status: true
