POWR-1174 environment indicator color changes

--- a/web/sites/default/config/environment_indicator.switcher.dev.yml
+++ b/web/sites/default/config/environment_indicator.switcher.dev.yml
@@ -6,5 +6,5 @@ machine: dev
 description: null
 name: Dev
 url: 'https://dev-portlandor.pantheonsite.io'
-fg_color: '#2a2f32'
-bg_color: '#33cc33'
+fg_color: '#ffffff'
+bg_color: '#046a38'
