--- a/web/sites/default/config/environment_indicator.switcher.live.yml
+++ b/web/sites/default/config/environment_indicator.switcher.live.yml
@@ -6,5 +6,5 @@ machine: live
 description: null
 name: Live
 url: 'https://beta.portland.gov'
-fg_color: '#2a2f32'
+fg_color: '#ffffff'
 bg_color: '#dc3545'
