--- a/web/sites/default/config/environment_indicator.switcher.test.yml
+++ b/web/sites/default/config/environment_indicator.switcher.test.yml
@@ -6,5 +6,5 @@ machine: test
 description: null
 name: Test
 url: 'https://test.portland.gov'
-fg_color: '#2a2f32'
-bg_color: '#ffff1a'
+fg_color: '#ffffff'
+bg_color: '#ffb81c'
