POWR-1371 added a no results found message

--- a/web/sites/default/config/views.view.admin_group_calendar_archive.yml
+++ b/web/sites/default/config/views.view.admin_group_calendar_archive.yml
@@ -789,7 +789,20 @@ display:
       title: 'Admin: Group: Calendar archive'
       header: {  }
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No calendar items found'
+            format: basic_style_editor
+          plugin_id: text
       relationships:
         group_content:
           id: group_content
