POWR-1371 removed pagination from calendar archive block and set View all link to only appear if needed

--- a/web/sites/default/config/views.view.admin_group_calendar_archive.yml
+++ b/web/sites/default/config/views.view.admin_group_calendar_archive.yml
@@ -888,7 +888,7 @@ display:
           plugin_id: group_id
       display_extenders: {  }
       use_more: true
-      use_more_always: true
+      use_more_always: false
       use_more_text: 'View all'
     cache_metadata:
       max-age: -1
@@ -948,23 +948,10 @@ display:
         groups:
           1: AND
       pager:
-        type: mini
+        type: some
         options:
           items_per_page: 5
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: «
-            next: »
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
     cache_metadata:
       max-age: -1
       contexts:
@@ -972,7 +959,6 @@ display:
         - 'languages:language_interface'
         - route
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
