--- a/web/sites/default/config/block.block.views_block__admin_group_calendar_archive_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__admin_group_calendar_archive_block_1.yml
@@ -1,4 +1,4 @@
-uuid: 0d5021c4-fd76-4646-bb7e-5a4cffa9f829
+uuid: be3ad6b2-9b4a-4f7c-8fb3-7685820d1fc7
 langcode: en
 status: true
 dependencies:
@@ -17,15 +17,15 @@ provider: null
 plugin: 'views_block:admin_group_calendar_archive-block_1'
 settings:
   id: 'views_block:admin_group_calendar_archive-block_1'
-  label: 'Calendar archive'
+  label: ''
   provider: views
-  label_display: visible
-  views_label: 'Calendar archive'
+  label_display: '0'
+  views_label: ''
   items_per_page: none
   context_mapping: {  }
 visibility:
   request_path:
     id: request_path
-    pages: '/*/group_node:calendar_item'
+    pages: '*group_node:calendar_item'
     negate: false
     context_mapping: {  }
