POWR-1371 re-added the block title

--- a/web/sites/default/config/block.block.views_block__admin_group_calendar_archive_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__admin_group_calendar_archive_block_1.yml
@@ -19,7 +19,7 @@ settings:
   id: 'views_block:admin_group_calendar_archive-block_1'
   label: ''
   provider: views
-  label_display: '0'
+  label_display: visible
   views_label: ''
   items_per_page: none
   context_mapping: {  }
