--- a/web/sites/default/config/views.view.admin_group_calendar_archive.yml
+++ b/web/sites/default/config/views.view.admin_group_calendar_archive.yml
@@ -853,7 +853,7 @@ display:
           entity_type: group_content
           entity_field: changed
           plugin_id: date
-      title: 'Admin: Group: Calendar archive'
+      title: 'Calendar archive'
       header: {  }
       footer: {  }
       empty:
