--- a/web/sites/default/config/views.view.my_groups.yml
+++ b/web/sites/default/config/views.view.my_groups.yml
@@ -71,6 +71,7 @@ display:
             group_roles: group_roles
             edit_group: edit_group
             nothing: nothing
+            nothing_1: nothing_1
           info:
             id:
               sortable: false
@@ -89,21 +90,28 @@ display:
             group_roles:
               align: ''
               separator: ''
-              empty_column: false
+              empty_column: true
               responsive: ''
             edit_group:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
-              empty_column: false
+              empty_column: true
               responsive: ''
             nothing:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
-              empty_column: false
+              empty_column: true
+              responsive: ''
+            nothing_1:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: true
               responsive: ''
           default: label_1
           empty_table: false
@@ -310,7 +318,7 @@ display:
           field: edit_group
           relationship: gid
           group_type: group
-          admin_label: ''
+          admin_label: 'Edit group'
           label: Edit
           exclude: false
           alter:
@@ -349,7 +357,7 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
+          hide_empty: true
           empty_zero: false
           hide_alter_empty: true
           text: 'Edit homepage'
@@ -357,66 +365,13 @@ display:
           absolute: false
           entity_type: group
           plugin_id: entity_link_edit
-        edit_group_content:
-          id: edit_group_content
-          table: group_content
-          field: edit_group_content
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Add
-          exclude: false
-          alter:
-            alter_text: true
-            text: "{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/node/create\">Add content | </a>{% endif %}\r\n\r\n{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/media/create\">Add media</a>{% endif %}"
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          text: edit
-          output_url_as_text: false
-          absolute: false
-          entity_type: group_content
-          plugin_id: entity_link_edit
         nothing:
           id: nothing
           table: views
           field: nothing
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: 'Manage members'
           label: Manage
           exclude: false
           alter:
@@ -455,9 +410,58 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
+          hide_empty: true
           empty_zero: false
           hide_alter_empty: true
+          plugin_id: custom
+        nothing_1:
+          id: nothing_1
+          table: views
+          field: nothing
+          relationship: none
+          group_type: group
+          admin_label: 'Add content'
+          label: Add
+          exclude: false
+          alter:
+            alter_text: true
+            text: "{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/node/create\">Add content</a> | {% endif %}\r\n{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/media/create\">Add media</a>{% endif %}"
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
           plugin_id: custom
       filters: {  }
       sorts: {  }
