POWR-1371 change Calendar item type widget to Chosen

--- a/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
   module:
+    - chosen_field
     - datetime
     - field_group
     - time_field
@@ -82,12 +83,9 @@ content:
     region: content
   field_calendar_item_type:
     weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_end_date:
     weight: 4
