--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
     - field.storage.node.field_summary
+    - node.type.calendar_item
     - node.type.event
   module:
     - datetime
@@ -607,12 +608,44 @@ display:
           id: type
           table: node_field_data
           field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
           value:
+            calendar_item: calendar_item
             event: event
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
           entity_type: node
           entity_field: type
           plugin_id: bundle
-          group: 1
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -713,13 +746,29 @@ display:
           admin_label: 'Content group content'
           required: true
           group_content_plugins:
+            'group_node:calendar_item': 'group_node:calendar_item'
             'group_node:event': 'group_node:event'
+            'group_node:alert': '0'
             'group_node:building': '0'
+            'group_node:charter_article': '0'
+            'group_node:charter_chapter': '0'
+            'group_node:charter_section': '0'
             'group_node:city_service': '0'
-            'group_node:guide': '0'
-            'group_node:information': '0'
+            'group_node:code_chapter': '0'
+            'group_node:code_section': '0'
+            'group_node:code_title': '0'
+            'group_node:council_document': '0'
+            'group_node:council_meeting': '0'
+            'group_node:development_permit': '0'
+            'group_node:external_resource': '0'
+            'group_node:location': '0'
             'group_node:news': '0'
+            'group_node:notification': '0'
+            'group_node:page': '0'
+            'group_node:park_facility': '0'
+            'group_node:policy': '0'
             'group_node:service_location': '0'
+            'group_node:top_search': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
         gid:
