POWR-1388 authenticated can see rabbit-hole content/groups

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -34,6 +34,8 @@ permissions:
   - 'create media'
   - 'delete own location content'
   - 'edit own location content'
+  - 'rabbit hole bypass group'
+  - 'rabbit hole bypass node'
   - 'revert charter_article revisions'
   - 'revert charter_chapter revisions'
   - 'revert charter_section revisions'
