POWR-1371 made start/end time fields conditional on All Day

--- a/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
@@ -16,6 +16,7 @@ dependencies:
   module:
     - bootstrap_datepicker
     - chosen_field
+    - conditional_fields
     - field_group
     - time_field
 third_party_settings:
@@ -24,9 +25,8 @@ third_party_settings:
       children:
         - field_start_date
         - field_start_time
-        - field_all_day
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
@@ -46,7 +46,7 @@ third_party_settings:
         - field_end_date
         - field_end_time
       parent_name: ''
-      weight: 6
+      weight: 4
       format_type: html_element
       format_settings:
         id: ''
@@ -67,14 +67,14 @@ bundle: calendar_item
 mode: default
 content:
   field_all_day:
-    weight: 5
+    weight: 2
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_calendar_item_location:
-    weight: 9
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -150,11 +150,28 @@ content:
     settings:
       enabled: false
       step: 5
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields:
+        58b74358-e318-4d77-a416-c4249c6a921e:
+          dependee: field_all_day
+          settings:
+            state: '!visible'
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: calendar_item
     type: time_widget
     region: content
   field_participants:
-    weight: 10
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -224,14 +241,31 @@ content:
     settings:
       enabled: false
       step: 5
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields:
+        5aa24ad3-d779-499d-b5ad-9d5c8f72bd44:
+          dependee: field_all_day
+          settings:
+            state: '!visible'
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: calendar_item
     type: time_widget
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 7
     region: content
     third_party_settings: {  }
   title:
