--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.teaser.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -23,6 +24,33 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        classes: {  }
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+    regions:
+      first:
+        - field_calendar_item_type
+        - group_content
+        - body
+        - field_all_day
+        - field_end_date
+        - field_end_time
+        - field_participants
+        - field_start_date
+        - field_start_time
+        - field_calendar_item_location
 id: node.calendar_item.teaser
 targetEntityType: node
 bundle: calendar_item
