--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -627,7 +627,7 @@ display:
             value: today
             type: date
           group: 1
-          exposed: true
+          exposed: false
           expose:
             operator_id: field_start_date_value_op
             label: 'Date range between'
@@ -813,6 +813,8 @@ display:
         use_more_text: false
         fields: false
         empty: false
+        filters: false
+        filter_groups: false
       pager:
         type: some
         options:
@@ -825,6 +827,73 @@ display:
       display_description: '5 upcoming events grouped by date links to events list page for group'
       block_hide_empty: true
       fields:
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: '{% if status == "Unpublished" %}<span class="badge badge-danger ml-2">Unpublished</span>{% endif %}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: custom
+            format_custom_true: ''
+            format_custom_false: Unpublished
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: status
+          plugin_id: field
         field_end_date:
           id: field_end_date
           table: node__field_end_date
@@ -1283,7 +1352,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"row\">\r\n  <div class=\"col-12\">\r\n    <h4>{{ title }}</h4>\r\n    <div class=\"event--time mb-2\">{{ field_all_day }}{{ field_start_time }}</div>\r\n    <p>{{ field_summary }}</p>\r\n  </div>\r\n</div>"
+            text: "<div class=\"row\">\r\n  <div class=\"col-12\">\r\n    <h4>{{ title }}{{ status }}</h4>\r\n    <div class=\"event--time mb-2\">{{ field_all_day }}{{ field_start_time }}</div>\r\n    <p>{{ field_summary }}</p>\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -1322,6 +1391,112 @@ display:
           hide_alter_empty: false
           plugin_id: custom
       empty: {  }
+      filters:
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            event: event
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          group: 1
+        field_start_date_value:
+          id: field_start_date_value
+          table: node__field_start_date
+          field: field_start_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>'
+          value:
+            min: today
+            max: '+30 days'
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: field_start_date_value_op
+            label: 'Date range between'
+            description: ''
+            use_operator: false
+            operator: field_start_date_value_op
+            identifier: start_date
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_end_date_value:
+          id: field_end_date_value
+          table: node__field_end_date
+          field: field_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+          2: OR
     cache_metadata:
       max-age: -1
       contexts:
