--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -4,6 +4,7 @@ address_map_link: 1.0.0
 admin_toolbar: 0.0.0
 admin_toolbar_tools: 0.0.0
 adminimal_admin_toolbar: 0.0.0
+aggregator: 8.7.7
 allowed_formats: 1.1.0
 anonymous_login: 1.1.0
 automated_cron: 0.0.0
