POWR-1382 Add map media type for Google Maps

--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -7,7 +7,7 @@ seckit_xss:
     object-src: ''
     img-src: ''
     media-src: ''
-    frame-src: '''self'' https://www.youtube.com/embed/ https://player.vimeo.com'
+    frame-src: '''self'' https://www.youtube.com/embed/ https://player.vimeo.com https://www.google.com/maps/'
     frame-ancestors: ''
     child-src: ''
     font-src: ''
