--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -187,6 +187,7 @@ module:
   unified_twig_ext: 0
   user: 0
   video_embed_field: 0
+  video_embed_google_maps: 0
   video_embed_media: 0
   views_bulk_operations: 0
   views_data_export: 0
