POWR-1361 use a contains to check for roles

--- a/web/sites/default/config/views.view.my_groups.yml
+++ b/web/sites/default/config/views.view.my_groups.yml
@@ -376,7 +376,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if group_roles == 'Admin' %} <a href=\"/group/{{ id }}/members\">Manage Members</a> {% endif %}\r\n\r\n"
+            text: "{% if 'Admin' in group_roles|render %} <a href=\"/group/{{ id }}/members\">Manage Members</a> {% endif %}\r\n\r\n"
             make_link: false
             path: ''
             absolute: false
@@ -425,7 +425,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/node/create\">Add content</a> | {% endif %}\r\n{% if group_roles == 'Admin' or group_roles == 'Editor' %} <a href=\"/group/{{ id }}/media/create\">Add media</a>{% endif %}"
+            text: '{% if ''Admin'' in group_roles|render or ''Editor'' in group_roles_render %} <a href="/group/{{ id }}/node/create">Add content</a> | <a href="/group/{{ id }}/media/create">Add media</a>{% endif %}'
             make_link: false
             path: ''
             absolute: false
